--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dependencies = [
   "numpy<2.1,>=1.21",  # required for framework layer and base class logic
   "packaging",  # for estimator specific dependency parsing
   "pandas<2.3.0,>=1.1",  # pandas is the main in-memory data container
-  "scikit-base>=0.6.1,<0.10.0",  # base module for sklearn compatible base API
+  "scikit-base>=0.6.1,<0.9.0",  # base module for sklearn compatible base API
   "scikit-learn>=0.24,<1.6.0",  # required for estimators and framework layer
   "scipy<2.0.0,>=1.2",  # required for estimators and framework layer
 ]
@@ -81,7 +81,7 @@ all_extras = [
   'autots<0.7,>=0.6.1',
   "cloudpickle",
   "dash!=2.9.0",
-  "dask<2024.8.3; extra == 'dataframe'",
+  "dask<2024.8.1; extra == 'dataframe'",
   "dtaidistance<2.4",
   "dtw-python",
   'esig==0.9.7; python_version < "3.10"',
@@ -217,8 +217,8 @@ regression = [
 transformations = [
   'esig<0.10,>=0.9.7; python_version < "3.11"',
   "filterpy<1.5,>=1.4.5",
-  "holidays>=0.29,<0.57",
-  "mne>=1.5,<1.9",
+  "holidays>=0.29,<0.55",
+  "mne>=1.5,<1.8",
   'numba<0.61,>=0.53',
   "pycatch22>=0.4,<0.4.6",
   "statsmodels<0.15,>=0.12.1",
@@ -289,6 +289,11 @@ dl = [
   'transformers[torch]<4.41.0; python_version < "3.12"',
   'pykan>=0.2,<0.2.7; python_version > "3.9.7"',
   'pytorch-forecasting>=1.0.0,<1.2.0',
+  'lightning>=2.0; python_version < "3.12"',
+  'gluonts>=0.14.3; python_version < "3.12"',
+  'einops>0.7.0; python_version < "3.12"',
+  'huggingface-hub>=0.23.0; python_version < "3.12"',
+  'hydra-core',
 ]
 mlflow = [
   "mlflow",
@@ -300,7 +305,7 @@ mlflow_tests = [
   "moto",
 ]
 numpy1 = [
-  "numpy<3.0.0",
+  "numpy<2.0.0",
 ]
 pandas1 = [
   "pandas<2.0.0",
@@ -417,6 +422,16 @@ allowed-confusables=["σ"]
   "PT012",  # `pytest.raises()` block should contain a single simple statement
   "PT019",  # Fixture `_` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
   "PT006" # Checks for the type of parameter names passed to pytest.mark.parametrize.
+]
+"sktime/libs/uni2ts/*.py" = [
+  "F722", # Checks for forward annotations that include invalid syntax.
+  "F821", # Checks for uses of undefined names.
+  "D100", # Missing docstring in public module
+  "D101", # Missing docstring in public class
+  "D102", # Missing docstring in public method
+  "D103", # Missing docstring in public function
+  "D104", # Missing docstring in public package
+  "D106", # Missing docstring in public nested class
 ]
 
 [tool.ruff.lint.pydocstyle]
