[DOC] Added a docstring example to TimeSeriesKernelKMeans (#7124)
<!--
Welcome to sktime, and thanks for contributing!
Please have a look at our contribution guide:
https://www.sktime.net/en/latest/get_involved/contributing.html
-->

#### Reference Issues/PRs
<!--
Example: Fixes #1234. See also #3456.

Please use keywords (e.g., Fixes) to create link to the issues or pull
requests
you resolved, so that they will automatically be closed when your pull
request
is merged. See
https://github.com/blog/1506-closing-issues-via-pull-requests.
If no issue exists, you can open one here:
https://github.com/sktime/sktime/issues
-->
Adds to #4264

#### What does this implement/fix? Explain your changes.
<!--
A clear and concise description of what you have implemented.
-->
Adds one docstring example to TimeSeriesKernelKMeans

#### Does your contribution introduce a new dependency? If yes, which
one?
No
<!--
Only relevant if you changed pyproject.toml.
We try to minimize dependencies in the core dependency set. There
are also further specific instructions to follow for soft dependencies.
See here for handling dependencies in sktime:
https://www.sktime.net/en/latest/developer_guide/dependencies.html
-->

<!-- This section is particularly useful if you have a pull request that
is still in development. You can guide the reviews to focus on the parts
that are ready for their comments. We suggest using bullets (indicated
by * or -) and filled checkboxes [x] here -->

#### Did you add any tests for the change?
No
<!-- This section is useful if you have added a test in addition to the
existing ones. This will ensure that further changes to these files
won't introduce the same kind of bug. It is considered good practice to
add tests with newly added code to enforce the fact that the code
actually works. This will reduce the chance of introducing logical bugs.
-->

#### PR checklist
<!--
Please go through the checklist below. Please fe

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3043,6 +3043,15 @@
         "code",
         "test"
       ]
+    },
+    {
+      "login": "Saptarshi-Bandopadhyay",
+      "name": "Saptarshi Bandopadhyay",
+      "avatar_url": "https://avatars.githubusercontent.com/u/88289395?v=4",
+      "profile": "https://github.com/Saptarshi-Bandopadhyay",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
