--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install .[all_extras,binder,dev,mlflow]
+          python -m pip install .[all_extras,binder,dev,mlflow,dl]
       - name: Run example notebooks
         run: build_tools/run_examples.sh
         shell: bash
