--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3052,6 +3052,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login":"vedantag17",
+      "name": "Vedant Agrawal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/118207011?v=4",
+      "profile": "https://github.com/vedantag17",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
