[DOC] Added MOIRAIforecaster to the API docs, create new section on pretrained FM (#7223)
**Reference Issue**
Fixes #7217

This PR adds the `MOIRAIforecaster` to the rst files in
docs\source\api_reference\forecasting.rst

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3054,6 +3054,15 @@
       ]
     },
     {
+      "login": "Dehelaan",
+      "name": "Nihal Chaudhary",
+      "avatar_url": "https://avatars.githubusercontent.com/u/120308161?s=400&v=4",
+      "profile": "https://github.com/Dehelaan",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
       "login":"vedantag17",
       "name": "Vedant Agrawal",
       "avatar_url": "https://avatars.githubusercontent.com/u/118207011?v=4",
