&rigvedmanoj, benheid, geetu040 [ENH] interface to Chronos (zero-shot) forecaster (#7001)
Adds an interface to the Chronos zero-shot forecaster, including a vendored version of the library.

Usage example:
```python
from sktime.datasets import load_airline
from sktime.forecasting.chronos import ChronosForecaster
from sktime.split import temporal_train_test_split
from sktime.forecasting.base import ForecastingHorizon
y = load_airline()
y_train, y_test = temporal_train_test_split(y)
fh = ForecastingHorizon(y_test.index, is_relative=False)
forecaster = ChronosForecaster("amazon/chronos-t5-tiny")
forecaster.fit(y_train)
y_pred = forecaster.predict(fh)
```

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3072,12 +3072,30 @@
       ]
     },
     {
-      "login":"jan-mue",
+      "login": "jan-mue",
       "name": "Jan Müller",
       "avatar_url": "https://avatars.githubusercontent.com/u/6440416?v=4",
       "profile": "https://github.com/jan-mue",
       "contributions": [
         "doc"
+      ]
+    },
+    {
+      "login": "Z-Fran",
+      "name": "Jindong Zhang",
+      "avatar_url": "https://avatars.githubusercontent.com/u/49083766?v=4",
+      "profile": "https://github.com/Z-Fran",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "RigvedManoj",
+      "name": "Rigved Manoj",
+      "avatar_url": "https://avatars.githubusercontent.com/u/28307990?v=4",
+      "profile": "https://github.com/RigvedManoj",
+      "contributions": [
+        "code"
       ]
     }
   ]
