[DOC] Fixes Time Series Segmentation with sktime and ClaSP notebook example (#7283)
#### Reference Issues/PRs

Fixes #7282 

#### What does this implement/fix? Explain your changes.

This fixes minor documentation issues with the ClaSP Segmentation
notebook.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3107,6 +3107,17 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "RobotPsychologist",
+      "name": "Christopher Risi",
+      "avatar_url": "https://avatars.githubusercontent.com/u/110344005?&v=4",
+      "profile": "https://github.com/RobotPsychologist",
+      "contributions": [
+        "bug",
+        "example",
+        "tutorial"
+      ]
     }
   ]
 }
