[MNT] Removes coverage upload steps from CI (#7012)
Fixes #6858

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -902,6 +902,15 @@
       ]
     },
     {
+      "login": "Prtm2110",
+      "name": "Pratham Hole",
+      "avatar_url": "https://avatars.githubusercontent.com/u/139000226?s=400&u=a2ef29514ad2780d1263ba9d724898132c8d18fb&v=4",
+      "profile": "https://github.com/Prtm2110",
+      "contributions": [
+        "maintenance"
+      ]
+    },
+    {
       "login": "dhirschfeld",
       "name": "Dave Hirschfeld",
       "avatar_url": "https://avatars1.githubusercontent.com/u/881019?v=4",
