[BUG] Prophet not tagged as "handles-missing-data" (#7267)
Prophet is able to handle missing data, but it is wrongly tagged so far.

Fixes https://github.com/sktime/sktime/issues/7266.

#### What does this implement/fix? Explain your changes.
I just set the tag to `True`.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3118,6 +3118,16 @@
       ]
     },
     {
+      "login": "Garve",
+      "name": "Robert Kübler",
+      "avatar_url": "https://avatars.githubusercontent.com/u/932327?v=4",
+      "profile": "https://linkedin.com/in/robert-kuebler",
+      "contributions": [
+        "bug",
+        "code"
+      ]
+    },
+    {
       "login": "RobotPsychologist",
       "name": "Christopher Risi",
       "avatar_url": "https://avatars.githubusercontent.com/u/110344005?&v=4",
