[DOC] docstring example for `PyodAnnotator` (#7042)
Adds a docstring example for `PyodAnnotator`

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3054,6 +3054,15 @@
       ]
     },
     {
+      "login": "madhuri723",
+      "name": "Madhuri",
+      "avatar_url": "https://avatars.githubusercontent.com/u/108001973?v=4&size=64",
+      "profile": "https://www.linkedin.com/in/madhuri-agarwal-166080209/",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
       "login": "Saptarshi-Bandopadhyay",
       "name": "Saptarshi Bandopadhyay",
       "avatar_url": "https://avatars.githubusercontent.com/u/88289395?v=4",
