[ENH] Added second test parameter to Arsenal classifier  (#7335)
#3429 

Added a second set of parameters to `get_test_params` in `_arsenal.py`.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3155,6 +3155,15 @@
         "example",
         "tutorial"
       ]
+    },
+    {
+      "login": "jusssch",
+      "name": "Julius Schmid",
+      "avatar_url": "https://avatars.githubusercontent.com/jusssch",
+      "profile": "https://github.com/jusssch",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
