--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3164,6 +3164,16 @@
       "contributions": [
         "code"
       ]
-    }
+    },
+    {
+      "login": "manolotis",
+      "name": "Manuel Muñoz Sánchez",
+      "avatar_url": "https://avatars.githubusercontent.com/manolotis",
+      "profile": "https://github.com/manolotis",
+      "contributions": [
+        "doc"
+      ]
+     }
+
   ]
 }
