--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,6 +137,7 @@ all_extras_pandas2 = [
   'keras-self-attention; python_version < "3.11"',
   'matplotlib!=3.9.1,>=3.3.2; python_version < "3.13"',
   'mne; python_version < "3.13"',
+  'nnetsauce>=0.26.0; python_version < "3.13"',
   'numba<0.61,>=0.53; python_version < "3.13"',
   'optuna<4.1; python_version < "3.13"',
   'pmdarima!=1.8.1,<3.0.0,>=1.8; python_version < "3.12"',
