--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3157,6 +3157,15 @@
       ]
     },
     {
+      "login": "VectorNd",
+      "name": "Rishabh Kamboj",
+      "avatar_url": "https://avatars.githubusercontent.com/u/111004091?v=4",
+      "profile": "https://github.com/VectorNd",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "jusssch",
       "name": "Julius Schmid",
       "avatar_url": "https://avatars.githubusercontent.com/jusssch",
