--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -86,10 +86,10 @@
       ]
     },
     {
-      "login":Adarsh2345",
-      "name":Adarsh J",
-      "avatar_url":https://avatars.githubusercontent.com/u/130629672?v=4
-      "profile":https://github.com/Adarsh2345
+      "login":"Adarsh2345",
+      "name":"Adarsh J",
+      "avatar_url":"https://avatars.githubusercontent.com/u/130629672?v=4",
+      "profile":"https://github.com/Adarsh2345",
       "contributions": [
          "doc"
       ]
