--- a/pyproject.toml
+++ b/pyproject.toml
@@ -289,7 +289,7 @@ dl = [
   'peft>=0.10.0; python_version < "3.12"',
   'tensorflow<2.17,>=2; python_version < "3.12"',
   'torch; python_version < "3.12"',
-  'transformers[torch]<4.41.0; python_version < "3.12"',
+  'transformers; python_version < "3.12"',
   'pykan>=0.2.1,<0.2.7; python_version > "3.9.7"',
   'pytorch-forecasting>=1.0.0,<1.2.0; python_version < "3.13"',
   'lightning>=2.0; python_version < "3.12"',
