--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,8 @@ all_extras = [
   'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < "3.11"',
   'u8darts>=0.29.0,<0.32.0; python_version < "3.13"',
   'xarray; python_version < "3.13"',
+  'transformers',
+  'tf-keras',
 ]
 
 # all soft dependencies compatible with pandas 2
@@ -159,8 +161,6 @@ all_extras_pandas2 = [
   'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < "3.11"',
   'u8darts>=0.29.0,<0.32.0; python_version < "3.13"',
   'xarray; python_version < "3.13"',
-  'transformers; python_version < "3.12"',
-  'tf-keras; python_version < "3.12"',
 ]
 
 # single-task dependencies, e.g., forecasting, classification, etc.
