--- a/pyproject.toml
+++ b/pyproject.toml
@@ -284,7 +284,9 @@ datasets = [
   "requests",
 ]
 dl = [
-  'FrEIA; python_version < "3.12"',
+  'torch; python_version < "3.12"',
+  'transformers; python_version < "3.12"',
+  'tf-keras; python_version < "3.12"',
 ]
 mlflow = [
   "mlflow",
