--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,9 @@ dependencies = [
   "scikit-base>=0.6.1,<0.12.0",  # base module for sklearn compatible base API
   "scikit-learn>=0.24,<1.6.0",  # required for estimators and framework layer
   "scipy<2.0.0,>=1.2",  # required for estimators and framework layer
+  'torch',
+  'transformers<4.41.0; python_version < "3.12"',
+  'tf-keras',
 ]
 
 [project.optional-dependencies]
