--- a/pyproject.toml
+++ b/pyproject.toml
@@ -288,17 +288,11 @@ dl = [
   'neuralforecast<1.8.0,>=1.6.4; python_version < "3.11"',
   'peft>=0.10.0; python_version < "3.12"',
   'tensorflow<2.17,>=2; python_version < "3.12"',
-  'torch; python_version < "3.12"',
+  'torch<2.4.0; python_version < "3.12"',
   'transformers[torch]<4.41.0; python_version < "3.12"',
-  'pykan>=0.2.1,<0.2.7; python_version > "3.9.7"',
-  'pytorch-forecasting>=1.0.0,<1.2.0; python_version < "3.13"',
-  'lightning>=2.0; python_version < "3.12"',
-  'gluonts>=0.14.3; python_version < "3.12"',
-  'einops>0.7.0; python_version < "3.12"',
-  'huggingface-hub>=0.23.0; python_version < "3.12"',
-  'accelerate',
-  'tqdm',
-  'hydra-core; python_version < "3.13"',
+  'pykan<0.2.2,>=0.2; python_version > "3.9.7"',
+  'pytorch-forecasting>=1.0.0; python_version < "3.11"',
+  'huggingface-hub>=0.23.0',
 ]
 mlflow = [
   "mlflow",
