Add myself to .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3191,6 +3191,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "mjste",
+      "name": "Michał Stefanik",
+      "avatar_url": "https://avatars.githubusercontent.com/mjste",
+      "profile": "https://github.com/mjste",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
