--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3200,6 +3200,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+        "login": "Sohaib-Ahmed21",
+        "name": "Sohaib Ahmed",
+        "avatar_url": "https://avatars.githubusercontent.com/Sohaib-Ahmed21",
+        "profile": "https://github.com/Sohaib-Ahmed21",
+        "contributions": [
+          "code"
+        ]
     }
   ]
 }
