[ENH] homogenization of sktime and skchange detection API - part 2 - base class `transform` return type (#7432)
#### Reference Issues/PRs

This change is part of the ongoing effort to homogenize the base class
detection module and ensure compliance across the `BaseDetector`
hierarchy, as listed in https://github.com/sktime/sktime/issues/7323.


#### What does this implement/fix? Explain your changes.

- Updates the `transform` method of the `BaseDetector` class to ensure
its return type complies with the updated contract, as described in the
class docstring. Specifically, the `transform` method now guarantees
that its return type is always a `pd.DataFrame` with the same index as
`sparse_to_dense`'s return type of `pd.Series`.
- Updates `test_transform_output_type` in the `test_all_annotators`
suite to expect a `pd.DataFrame` return type.

Separate PRs will be needed for other base class methods to ensure
similar compliance with their respective contracts:

- [x] `predict` - #7433
- [ ] `predict_scores`
- [ ] `predict_points`

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3202,6 +3202,15 @@
       ]
     },
     {
+      "login": "alyssadsouza",
+      "name": "Alyssa D'Souza",
+      "avatar_url": "https://avatars.githubusercontent.com/alyssadsouza",
+      "profile": "https://github.com/alyssadsouza",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "ShivamJ07",
       "name": "Shivam Singal",
       "avatar_url": "https://avatars.githubusercontent.com/ShivamJ07",
