[ENH] Add test parameter set for STRAY (#7420)
Towards #3429

Add a second test parameter set for STRAY

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3193,6 +3193,16 @@
       ]
     },
     {
+      "login": "tajir0",
+      "name": "Jinrong Tang",
+      "avatar_url": "https://avatars.githubusercontent.com/u/36022362",
+      "profile": "https://github.com/tajir0",
+      "contributions": [
+        "code",
+        "test"
+      ]
+    },
+    {
       "login": "mjste",
       "name": "Michał Stefanik",
       "avatar_url": "https://avatars.githubusercontent.com/mjste",
