--- a/.github/workflows/test_other.yml
+++ b/.github/workflows/test_other.yml
@@ -77,6 +77,7 @@ jobs:
           --ignore sktime/annotation
           --ignore sktime/classification
           --ignore sktime/clustering
+          --ignore sktime/detection
           --ignore sktime/forecasting
           --ignore sktime/networks
           --ignore sktime/param_est
