--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,4 +11,4 @@
 # Further lookup such as "which algorithms does M maintain"
 # can be carried out using registry.all_estimators
 
-* @achieveordie @benheid @fkiraly @fnhirwa @geetu040 @pranavvp16 @XinyuWuu @yarnabrina
+* @achieveordie @benheid @fkiraly @fnhirwa @geetu040 @pranavvp16 @SaiRevanth25 @XinyuWuu @yarnabrina
