&vectornd [ENH] Added Spatio-Temporal DBSCAN (#7353)
#### Reference Issues/PRs
#7054. See also #7106

#### What does this implement/fix? Explain your changes.
Re-implementation of the spatio-temporal DBSCAN algorithm from @eren-ck
(see the original implementation
[here](https://github.com/eren-ck/st_dbscan))

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3191,6 +3191,14 @@
       "contributions": [
         "doc"
       ]
+     },
+     {
+      "login": "vagechirkov",
+      "name": "Valerii Chirkov",
+      "avatar_url": "https://avatars.githubusercontent.com/vagechirkov",
+      "profile": "https://github.com/vagechirkov",
+      "contributions": [
+        "code",
     },
     {
       "login": "tajir0",
