[ENH] SCINet forecaster (#7400)
Fixes #6831, adds time series forecasting model SCINet to sktime.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3220,6 +3220,15 @@
       ]
     },
     {
+        "login": "Sohaib-Ahmed21",
+        "name": "Sohaib Ahmed",
+        "avatar_url": "https://avatars.githubusercontent.com/Sohaib-Ahmed21",
+        "profile": "https://github.com/Sohaib-Ahmed21",
+        "contributions": [
+          "code"
+        ]
+    },
+    {
       "login": "alyssadsouza",
       "name": "Alyssa D'Souza",
       "avatar_url": "https://avatars.githubusercontent.com/alyssadsouza",
