--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3199,6 +3199,7 @@
       "profile": "https://github.com/vagechirkov",
       "contributions": [
         "code",
+        "doc"
       ]
     },
     {
