--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3191,14 +3191,16 @@
       "contributions": [
         "doc"
       ]
-     },
-     {
+    },
+    {
       "login": "vagechirkov",
       "name": "Valerii Chirkov",
       "avatar_url": "https://avatars.githubusercontent.com/vagechirkov",
       "profile": "https://github.com/vagechirkov",
       "contributions": [
         "code",
+        "doc"
+      ]
     },
     {
       "login": "tajir0",
