--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3229,6 +3229,15 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "TanviPooranmal",
+      "name": "Tanvi Pooranmal Meena"
+      "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
+      "profile": "https://github.com/TanviPooranmal",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
