add self to contributor file

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3248,6 +3248,15 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "y-mx",
+      "name": "Yimeng Xie",
+      "avatar_url": "https://avatars.githubusercontent.com/y-mx",
+      "profile": "https://github.com/y-mx",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
