Add contributor Gavin Katz to .all-contributorsrc file.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3248,6 +3248,16 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "gavinkatz001",
+      "name": "Gavin Katz",
+      "avatar_url": "https://avatars.githubusercontent.com/u/124807974?v=4",
+      "profile": "https://github.com/gavinkatz001",
+      "contributions": [
+        "doc",
+        "code"
+      ]
     }
   ]
 }
