--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3081,7 +3081,7 @@
       ]
     },
     {
-      "login":"vedantag17",
+      "login": "vedantag17",
       "name": "Vedant Agrawal",
       "avatar_url": "https://avatars.githubusercontent.com/u/118207011?v=4",
       "profile": "https://github.com/vedantag17",
@@ -3099,7 +3099,7 @@
       ]
     },
     {
-      "login":"markussagen",
+      "login": "markussagen",
       "name": "Markus Sagen",
       "avatar_url": "https://avatars.githubusercontent.com/u/20767068?v=4",
       "profile": "https://github.com/markussagen",
@@ -3222,13 +3222,13 @@
       ]
     },
     {
-        "login": "Sohaib-Ahmed21",
-        "name": "Sohaib Ahmed",
-        "avatar_url": "https://avatars.githubusercontent.com/Sohaib-Ahmed21",
-        "profile": "https://github.com/Sohaib-Ahmed21",
-        "contributions": [
-          "code"
-        ]
+      "login": "Sohaib-Ahmed21",
+      "name": "Sohaib Ahmed",
+      "avatar_url": "https://avatars.githubusercontent.com/Sohaib-Ahmed21",
+      "profile": "https://github.com/Sohaib-Ahmed21",
+      "contributions": [
+        "code"
+      ]
     },
     {
       "login": "alyssadsouza",
@@ -3247,6 +3247,15 @@
       "contributions": [
         "bug",
         "code"
+      ]
+    },
+    {
+      "login": "skinan",
+      "name": "Muhammad Sakib Khan Inan",
+      "avatar_url": "https://avatars.githubusercontent.com/skinan",
+      "profile": "https://github.com/skinan",
+      "contributions": [
+        "doc"
       ]
     },
     {
