--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -182,6 +182,16 @@
       ]
     },
     {
+      "login": "jgyasu",
+      "name": "Jigyasu",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/51952076?v=4",
+      "profile": "https://jgyasu.github.io",
+      "contributions": [
+        "code",
+        "doc"
+      ]
+    },
+    {
       "login": "jesellier",
       "name": "jesellier",
       "avatar_url": "https://avatars0.githubusercontent.com/u/51952076?v=4",
