--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3132,7 +3132,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/116151399?v=4",
       "profile": "https://github.com/phoeenniixx",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
