[DOC] docstring usage examples for `AlignerDTW` and `AlignerDTWfromDist` (#7381)
### Pull Request Description ( See issue_number #4264 )

**Title**: Added usage examples to `AlignerDTW` and `AlignerDTWfromDist`
class docstrings

**What’s Changed**:
- I’ve added simple and advanced usage examples to the docstrings for
both `AlignerDTW` and `AlignerDTWfromDist`.
- The examples show how to initialize the aligners, fit them with some
example data, and get the alignment, distance, and distance matrix.
- This update will make it easier for users to understand how to use
these classes for time series alignment using DTW (Dynamic Time
Warping).

- There were no usage examples in the original docstring, which could
make it harder for new users to get started. These examples will now
provide quick guidance.
- The examples I’ve included cover both basic use (default settings) and
more complex scenarios (custom alignment parameters).
- This should help make the classes more user-friendly and easier to
implement for anyone looking to do time series alignment with DTW.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3251,6 +3251,15 @@
       ]
     },
     {
+      "login":"Adarsh2345",
+      "name":"Adarsh J",
+      "avatar_url":"https://avatars.githubusercontent.com/u/130629672?v=4",
+      "profile":"https://github.com/Adarsh2345",
+      "contributions": [
+         "doc"
+      ]
+    },
+    {
       "login": "skinan",
       "name": "Muhammad Sakib Khan Inan",
       "avatar_url": "https://avatars.githubusercontent.com/skinan",
