&fkiraly [ENH] Fix `BaseDetector` for segmentation and HMM estimators (#7480)
(Updated by @fkiraly)

This PR updates the HMM detectors to be in line with the new interface specifications.

Some issues with the `BaseDetector` methods were also uncovered and fixed in the process.

Fixes https://github.com/sktime/sktime/issues/7414, fixes https://github.com/sktime/sktime/issues/7410

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3251,10 +3251,19 @@
       ]
     },
     {
-      "login":"Adarsh2345",
-      "name":"Adarsh J",
-      "avatar_url":"https://avatars.githubusercontent.com/u/130629672?v=4",
-      "profile":"https://github.com/Adarsh2345",
+      "login": "y-mx",
+      "name": "Yimeng Xie",
+      "avatar_url": "https://avatars.githubusercontent.com/y-mx",
+      "profile": "https://github.com/y-mx",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Adarsh2345",
+      "name": "Adarsh J",
+      "avatar_url": "https://avatars.githubusercontent.com/u/130629672?v=4",
+      "profile": "https://github.com/Adarsh2345",
       "contributions": [
          "doc"
       ]
