Improved docstring, warnings and added numpy functions to improve efficiency. Added myself to contributers

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3258,6 +3258,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "aykut-uz",
+      "name": "Aykut Uzunoglu",
+      "avatar_url": "https://avatars.githubusercontent.com/aykut-uz",
+      "profile": "https://github.com/aykut-uz",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
