added data in all-contributors file

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3295,6 +3295,16 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "lenaklosik",
+      "name": "Lena Klosik",
+      "avatar_url": "https://avatars.githubusercontent.com/lenaklosik",
+      "profile": "https://github.com/lenaklosik",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
+
