change contributions to code

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3302,7 +3302,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/lenaklosik",
       "profile": "https://github.com/lenaklosik",
       "contributions": [
-        "doc"
+        "code"
       ]
     }
   ]
