--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3295,6 +3295,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "VjayRam",
+      "name": "Vijay Ram Enaganti",
+      "avatar_url": "https://avatars.githubusercontent.com/u/76694566?v=4",
+      "profile": "https://github.com/VjayRam",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
