--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3295,6 +3295,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "b9junkers",
+      "name": "Shounak Shirodkar",
+      "avatar_url": "https://avatars.githubusercontent.com/u/54496663?v=4",
+      "profile": "https://github.com/b9junkers",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
