Update contributors file

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3295,6 +3295,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "marcosfelt",
+      "name": "Kobi Felton",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25933639?v=4",
+      "profile": "https://github.com/marcosfelt",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
