--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3313,6 +3313,16 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "manu042k",
+      "name": "Manoj Manjunatha",
+      "avatar_url": "https://avatars.githubusercontent.com/u/60233628?v=4",
+      "profile": "https://github.com/manu042k",
+      "contributions": [
+        "doc"
+      ]
     }
+
   ]
 }
