--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -52,3 +52,46 @@ jobs:
 					python -m pip install --upgrade pip
 					pip install PyGithub
 					
+			- name: Test Comment Docs Action
+				uses: ./.github/actions/comment-docs
+				with:
+					github_token: ${{ secrets.GITHUB_TOKEN }}
+					pr_number: ${{ github.event.pull_request.number }}
+
+	test-notebook-action:
+		runs-on: ubuntu-latest
+		steps:
+			- uses: actions/checkout@v3
+			
+			- name: Create test notebook
+				run: |
+					echo '{
+					 "cells": [
+						{
+						 "cell_type": "code",
+						 "execution_count": null,
+						 "metadata": {},
+						 "outputs": [],
+						 "source": ["print(\"Hello World!\")"]
+						}
+					 ],
+					 "metadata": {},
+					 "nbformat": 4,
+					 "nbformat_minor": 4
+					}' > test.ipynb
+					
+			- name: Set up Python
+				uses: actions/setup-python@v4
+				with:
+					python-version: '3.x'
+					
+			- name: Install dependencies
+				run: |
+					python -m pip install --upgrade pip
+					pip install jupyter nbconvert nbformat PyGithub
+					
+			- name: Test Notebook Action
+				uses: ./.github/actions/auto-commit-notebooks
+				with:
+					github_token: ${{ secrets.GITHUB_TOKEN }}
+					pr_number: ${{ github.event.pull_request.number }}
